--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,5 +18,6 @@
 <body>
     <img src="header.jpg" alt="header" />
     <img src="hero.jpg" alt="hero"/>
+    <img src="acustica.jpg" alt="acustica">
 </body>
 </html>
