--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     </style>
 </head>
 <body>
-    <img src="header.jpg" alt="header" />
-    <img src="hero.jpg" alt="hero"/>
-    <img src="acustica.jpg" alt="acustica">
+    <img src="nueva-version.jpg" alt="header" />
 </body>
 </html>
